--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root {
     --überschrift_1_farbe: #fff;
     --überschrift_2_farbe: #fff;
-    --überschrift_3_farbe: #76f9f9;
+    --überschrift_3_farbe: #00ffff;
     --überschrift_4_farbe: #fff;
     --überschrift_5_farbe: #76f9f9;
     --code_farbe: #80FFFD;
-    --absatz_farbe: #5d8381;
-    --contain_background_color: #0d0e1195;
+    --absatz_farbe: #889594;
+    --contain_background_color: #3b565d24;
 }
 
 * {
@@ -219,6 +219,7 @@ table.syntax td, table.syntax th{
     background-color: var(--contain_background_color);
     padding: 2rem;
     border-radius: 1rem;
+    backdrop-filter: blur(0.1rem);
 }
 
 .container {
